--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,7 +5,7 @@ ports:
 tasks:
   - command: >
         pyenv global 3.7.4 &&
-        pipenv install django==2.2.7
-        pipenv install djangoforestframework==3.10.3
+        pipenv install django==2.2.7 &&
+        pipenv install djangoforestframework==3.10.3 &&
         pipenv install &&
         pipenv shell &&
