--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,4 +8,4 @@ tasks:
         pipenv install django==2.2.7 &&
         pipenv install djangoforestframework==3.10.3 &&
         pipenv install &&
-        pipenv shell &&
+        pipenv shell
